# TRACE

./: .gitignore  README.md  judge_dataset.jsonl  main.py  pyproject.toml
data/: iosxr_prompt.txt
documentation/: README.md  catalog.md  ingestion.md  rag.md  retrieval.md  yang.md
mlruns/0/: meta.yaml
mlruns/332362951122688275/: meta.yaml
mlruns/332362951122688275/13db0ca91826476f90bebbedfed6af14/: meta.yaml
mlruns/332362951122688275/15a0e15c92a04fab905d866b4aeb6628/: meta.yaml
mlruns/332362951122688275/21a2f33ea7ee4489acfa524a02d73de2/: meta.yaml
mlruns/332362951122688275/290b9c4438ea4f31916d95a4a9834a79/: meta.yaml
mlruns/332362951122688275/2c9e25d1041e4bbaaec7cfef2e67a232/: meta.yaml
mlruns/332362951122688275/406ce4fb3e0847b2b1765e39001a672d/: meta.yaml
mlruns/332362951122688275/4a4f8e25af574edb8fd6c2ac83267bf7/: meta.yaml
notebooks/: 1-chunking.ipynb  eval.ipynb  evaluation.ipynb  evaluation_finetuning.ipynb  evaluation_rag.ipynb  mlflow.db-journal  per_example_all_hf_runs_from_traces.csv  per_example_all_runs_from_traces.csv  per_example_eval.csv  rag.ipynb  sweep_leaderboard.csv  visualization.ipynb
notebooks/mlruns/0/: meta.yaml
scripts/: README.md  build_sensor_catalog.py  import_yang_modules.py  ingest_qdrant.py  naive_rag.py  retrieve_chunks.py
src/1-data_import/: main.py
src/cli/: 3_ingest_embeddings_qdrant.py
src/data/: 2_build_sensor_catalog.py  3_ingest_catalog_embeddings_qdrant.py  4_ingest_raw_yang_embeddings_qdrant.py
src/qdrant_ingest_lib/: qdrant_ingest_lib.py
src/trace/: __init__.py
src/tracerag/catalog/: builder.py  (+1 more)
(+2081 files in other folders)
