[project]
name = "trace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.8"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.1",
    "huggingface-hub>=0.36.0",
    "ipykernel>=7.1.0",
    "litellm>=1.80.15",
    "mlflow>=3.8.1",
    "openai>=2.15.0",
    "peft>=0.18.1",
    "pyang>=2.7.1",
    "qdrant-client>=1.16.2",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "trl[judges]>=0.26.2",
]
